Create Payment  System and Update config